--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <title>AR</title>
 </head>
-<body>
+<body style="margin : 0px; overflow: hidden;">
 
 <a-scene embedded arjs>
     <a-marker preset="hiro">
         <a-box position="0 0.5 0" material="color: red;">
-            <a-animation attribute="rotation" dur="3000" to="360 360 0" repeat="indefinite"
-                         easing="linear"></a-animation>
+            <a-entity attribute="rotation" dur="3000" to="360 360 0" repeat="indefinite"
+                         easing="linear"></a-entity>
         </a-box>
     </a-marker>
     <a-entity camera></a-entity>
