--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
 <a-scene embedded arjs>
     <a-marker preset="hiro">
-        <a-box position="0 0.5 0" material="color: red;">
-            <a-entity attribute="rotation" dur="3000" to="360 360 0" repeat="indefinite"
-                         easing="linear"></a-entity>
+        <a-box position="0 0.5 0" material="color: white;" animation="property: rotation; to: 0 360 0; loop: true; dur: 3000">
         </a-box>
     </a-marker>
     <a-entity camera></a-entity>
