change color test 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <a-scene embedded arjs>
     <a-marker preset="hiro">
-        <a-box position="0 0.5 0" material="change-color='color: #f00'"
+        <a-box position="0 0.5 0" change-color='color: #f00'
                animation="property: rotation; to: 0 360 0; loop: true; dur: 3000">
         </a-box>
     </a-marker>
