--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
                id="mouseCursor" cursor="rayOrigin: mouse">
         </a-box>
     </a-marker>
-    <a-entity camera  animation__mouseenter="property: components.material.material.color; type: color; to: blue; startEvents: mouseenter; dur: 500";
-              animation__mouseleave="property: components.material.material.color; type: color; to: red; startEvents: mouseleave; dur: 500";>>
+    <a-entity camera
+              animation__mouseenter="property: components.material.material.color; type: color; to: blue; startEvents: mouseenter; dur: 500"
+              ;
+              animation__mouseleave="property: components.material.material.color; type: color; to: red; startEvents: mouseleave; dur: 500"
+              ;>
         <a-cursor scale="0.5 0.5" color="#fff"></a-cursor>
     </a-entity>
 </a-scene>
@@ -25,9 +28,9 @@
 		schema: {
 			color: {default: '#fff'}
 		},
-		init: function(){
+		init: function () {
 			var data = this.data;
-			this.el.addEventListener('click', function(){
+			this.el.addEventListener('click', function () {
 				this.setAttribute('color', data.color);
 			})
 		}
