--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body style="margin : 0; overflow: hidden;">
 
 <a-scene embedded arjs>
-    <a-marker preset="hiro">
+    <a-marker preset="hiro" cursor="rayOrigin: mouse">
         <a-box position="0 0.5 0" change-color="color: blue"
-               animation="property: rotation; to: 0 360 0; loop: true; dur: 3000">
+               animation="property: rotation; to: 0 360 0; loop: true; dur: 3000" click-listener-component>
         </a-box>
     </a-marker>
     <a-entity camera>
