--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <title>AR</title>
+    <title>AR Marker</title>
 </head>
 <body style="margin : 0; overflow: hidden;">
 
+<h1>Activez votre caméra et pointez un marqueur Hiro</h1>
+
 <a-scene embedded arjs>
     <a-marker preset="hiro" cursor="rayOrigin: mouse">
-        <a-box position="0 0.5 0" change-color="color: blue"
+        <a-box position="0 0.5 0" change-color="color: black"
                animation="property: rotation; to: 0 360 0; loop: true; dur: 3000" click-listener-component>
         </a-box>
     </a-marker>
